syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";

message TokenManagement {
    TokenRef token = 1;
    AccountID treasury = 2;
    Key adminKey = 3;
    Key kycKey = 4;
    Key freezeKey = 5;
    Key wipeKey = 6;
    Key supplyKey = 7;
    string symbol = 8;
    string name = 9;
    AccountID autoRenewAccount = 10;
    uint64 autoRenewPeriod = 11;
    uint64 expiry = 12;
}
